--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+# install-upgrade-kernel-ext-usb-gtk
 install-upgrade-kernel-ext-usb is a script that make easy to install kernel packages 
 without removing the previous kernel packages and upgrading grub menus boot loader.
 
