--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 # install-upgrade-kernel-ext-usb-gtk
 
-install-upgrade-kernel-ext-usb-gtk is a gui tool of the script 
-which is written in C using glade and gtk2.
+install-upgrade-kernel-ext-usb-gtk is a gui tool which is written in C using glade and gtk2.
 It is used for installations of slackel on external SSD disks or USB sticks.
 
 install-upgarade-kernel-ext-usb-gtk can be used on any slackware or slackware based
