--- a/doc/README
+++ b/doc/README
@@ -1,4 +1,4 @@
-install-upgrade-kernel-ext-usb-gtk is a gui tool which is written in c using glade and gtk2.
+install-upgrade-kernel-ext-usb-gtk is a gui tool which is written in C using glade and gtk2.
 It is used for installations of slackel on external SSD disks or USB sticks.
 
 install-upgarade-kernelext-usb-gtk can be used on any slackware or slackware based
