--- a/doc/README
+++ b/doc/README
@@ -1,8 +1,7 @@
 install-upgrade-kernel-ext-usb-gtk is a gui tool which is written in C using glade and gtk2.
 It is used for installations of slackel on external SSD disks or USB sticks.
 
-install-upgrade-kernelext-usb-gtk can be used on any slackware or slackware based
-system. 
+install-upgrade-kernel-gtk can be used on any slackware based distributions. 
 
 To download and create the package type:
 mkdir build 
