--- a/doc/README
+++ b/doc/README
@@ -30,7 +30,7 @@ To install the package type: for 64bit: sudo spkg install-upgrade-kernel-ext-usb
 
 or for 32bit: sudo spkg install-upgrade-kernel-ext-usb-gtk-4.0-i586-3dj.txz
 
-Copyright (C) 2022 Dimitris Tzemos dijemos@gmail.com This program is free software: 
+Copyright (C) 2022-2024 Dimitris Tzemos dijemos@gmail.com This program is free software: 
 you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation,
 either version 2 of the License, or (at your option) any later version.
 This program is distributed in the hope that it will be useful,
